--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "firebase": "^10.10.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
